[package]
name = "stf-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
eframe = { version = "0.24.0", features = ["wayland"] }

[dependencies.stfi-proc]
path = "../stf-proc" 

[profile.release]
opt-level = 'z'
codegen-units = 1
strip = true
lto = true
panic = "abort"
